--- a/main.css
+++ b/main.css
@@ -2,4 +2,16 @@ body {
     margin: 0;
     padding: 0;
     background-color: black;
+    width: 100%;
+    min-height: 100vh;
+    display: grid;
+    gap: 10px;
+    grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+}
+
+canvas {
+    background-color: turquoise;
+    width: 100%;
+    height: 50%;
+    cursor: pointer;
 }
